<resources>
    <string name="app_name">Si2</string>
    <string name="escriba_su_correo">escriba su correo</string>
    <string name="correo">Correo:</string>
    <string name="contrase_a">contraseña</string>

    <string name="bueno">bueno</string>
    <string name="olvidaste_tu_contrae_a">¿Olvidaste tu contraseña?</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="iniciar_sesion">iniciar sesion</string>
    <string name="recuperar">recuperar</string>
    <string name="repita_constrase_a">repita constraseña</string>
    <string name="escriba_su_nombre">escriba su nombre</string>
    <string name="registrarse">Registrarse</string>
    <string name="lista_de_productos">Lista de Productos</string>
    <string name="descripcion_del_producto">descripcion_del_producto</string>
    <string name="cantidad">cantidad</string>
    <string name="precio">precio</string>
    <string name="nombre_del_producto">nombre_del_producto</string>
    <string name="imagen">imagen</string>
</resources>