<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"


    >

    <ImageView
        android:id="@+id/imagen"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="30dp"
        android:scaleType="fitXY"
        android:src="@drawable/personas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/bueno"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cajacorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        android:background="#FFFFFF"
        android:layout_marginHorizontal="50dp"
        app:layout_constraintTop_toBottomOf="@+id/imagen">
        <EditText
            android:id="@+id/correo"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:hint="@string/escriba_su_correo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            android:inputType="textEmailAddress"
            android:drawableLeft="@drawable/email"
            android:gravity="start"
            android:drawableStart="@drawable/email"
            android:autofillHints="" />
    </com.google.android.material.textfield.TextInputLayout>




    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cajacontaseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cajacorreo"
        app:passwordToggleEnabled="true">
        <EditText
            android:id="@+id/contraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"

            android:hint="@string/contrase_a"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/correo"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/lock"
            android:drawableStart="@drawable/lock"
            android:gravity="start"

            android:autofillHints="" />

    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/olvidar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/olvidaste_tu_contrae_a"
        android:textColor="#123654"
        android:textStyle="bold"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/cajacontaseña"
        app:layout_constraintStart_toStartOf="@+id/cajacontaseña"
         />

    <TextView
        android:id="@+id/nuevo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:text="@string/crear_cuenta"
        android:textColor="#123654"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"

        app:layout_constraintTop_toBottomOf="@+id/cajacontaseña" />
    <Button
        android:id="@+id/boton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/iniciar_sesion"
        app:layout_constraintTop_toBottomOf="@+id/cajacontaseña"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        android:textColor="#000"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/boton_redondo"
        android:onClick="iniciar"

        />




</androidx.constraintlayout.widget.ConstraintLayout>